--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,211 @@
+@import 'variables';
+@import 'mixins';
+
 h1 {
-  color: blue;
+  font-family: $font-primary;
+  font-size: 250px;
+  color: $white;
+  padding: 0 5rem 0;
+  overflow: hidden;
+}
+
+h2 {
+  font-family: $font-primary;
+  font-size: 100px;
+  color: $black;
+}
+
+h3 {
+  font-family: $font-primary;
+  font-size: 50px;
+  color: $black;
+}
+
+p {
+  font-family: $font-secondary;
+  font-weight: 300;
+}
+
+h1, h2, h3, p {
+  margin-bottom: 0;
+}
+
+.scroll-anchor {
+  position: absolute;
+  bottom: 1rem;
+  width: 100vw;
+  color: $white;
+  text-align: center;
+
+  p {
+    text-decoration: underline;
+    margin-bottom: 10px;
+  }
+}
+
+.icon {
+  transform: translateY(3px);
+}
+
+.header {
+  padding: 2rem 3rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  opacity: 1;
+  z-index: 999;
+  width: calc(100vw);
+  position: relative;
+
+  a {
+    img {
+      margin-bottom: 0;
+    }
+  }
+
+  .header-links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    .link {
+      margin: 0 0 0 1.5rem;
+
+      &.selected {
+        a {
+          color: $black;
+          text-decoration: underline;
+        }
+      }
+
+      a {
+        color: $black;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+.section {
+  position: relative;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.content {
+  width: 60vw;
+  max-width: 850px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.landing {
+  .landing-quote {
+    background-color: $black;
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .welcome {
+    .content {
+      .content-text {
+        @include transform(translateX(-2rem));
+
+        h2 {
+          margin-bottom: 10px;
+        }
+      }
+
+      img {
+        height: 400px;
+        @include transform(translateX(2rem));
+      }
+    }
+  }
+}
+
+.companies-page {
+  .companies {
+    position: relative;
+    width: 100vw;
+    padding: 75px 150px;
+
+    h2 {
+      margin-bottom: 2rem;
+    }
+
+    .companies-container {
+      display: grid;
+      grid-gap: 3rem 2rem;
+      grid-template-columns: repeat( auto-fill, minmax(300px, 1fr) );
+
+      .company {
+        h3 {
+          margin: 20px 0;
+        }
+
+        .place {
+          position: absolute;
+          @include transform(translateY(-100%));
+        }
+
+        .avi-container {
+          height: 250px;
+          background-size: cover;
+          background-position: center;
+        }
+      }
+    }
+  }
+}
+
+.people-page {
+  .people {
+    position: relative;
+    width: 100vw;
+    padding: 75px 150px;
+
+    h2 {
+      margin-bottom: 2rem;
+    }
+
+    .people-container {
+      display: grid;
+      grid-gap: 3rem 2rem;
+      grid-template-columns: repeat( auto-fill, minmax(300px, 1fr) );
+
+      .person {
+        h3 {
+          margin: 20px 0;
+        }
+
+        .avi-container {
+          height: 350px;
+          background-size: cover;
+          background-position: center;
+        }
+      }
+    }
+  }
+}
+
+@include width-above(desktop-lg) {
+  h1 {
+    font-family: $font-primary;
+    font-size: 300px;
+    color: $white;
+    padding: 0 10rem 0;
+  }
 }
